# MusicPlayer

./: CMakeLists.txt  CMakeUserPresets.json  MainWindow.cpp  MainWindow.h  README.md  main.cpp
include/core/: LyricsParser.h  MusicTrack.h  PlaybackController.h
include/data/: MusicLibrary.h
include/providers/: LocalProvider.h  MusicProvider.h  ProviderRegistry.h
include/ui/: FolderManagerDialog.h  FullscreenVideoWindow.h  MainWindow.h  VideoStateOverlay.h
resources/: MusicPlayer.qrc
resources/styles/: app.qss
src/: main.cpp
src/core/: LyricsParser.cpp  PlaybackController.cpp
src/data/: MusicLibrary.cpp
src/providers/: LocalProvider.cpp  ProviderRegistry.cpp
src/ui/: FolderManagerDialog.cpp  FullscreenVideoWindow.cpp  MainWindow.cpp  VideoStateOverlay.cpp
ui/: MainWindow.ui
